[END] add end of TP7 Javancé

--- a/Compression de données/TP1/2022-TP1-Huffman.ipynb
+++ b/Compression de données/TP1/2022-TP1-Huffman.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
        "[(28, 'a'), (8, 'b'), (8, 'c'), (4, 'd')]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,15 +168,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(51210, 5847), (48888, 7064), (90968, 8106), (74555, 6503), (59856, 6493)]\n",
-      "[(48888, 7064), (51210, 5847), (59856, 6493), (74555, 6503), (90968, 8106)]\n"
+      "[(25369, 8480), (85004, 7977), (79770, 5360), (76353, 908), (98050, 4567)]\n",
+      "[(25369, 8480), (76353, 908), (79770, 5360), (85004, 7977), (98050, 4567)]\n"
      ]
     }
    ],
@@ -199,8 +199,7 @@
     "        L.append(C)\n",
     "print(L)\n",
     "\n",
-    "print(tri_par_tas(lambda x:x[0], L))\n",
-    "\n"
+    "print(tri_par_tas(lambda x:x[0], L))\n"
    ]
   },
   {
@@ -219,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -257,12 +256,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "48\n",
+      "{'b': '00', 'd': '010', 'c': '011', 'a': '1'}\n"
+     ]
+    }
+   ],
    "source": [
+    "res = huffmanTree(L)\n",
+    "\n",
+    "def prefixe(node, dic, val):\n",
+    "    if(node != None):\n",
+    "        if(node[1] == None):\n",
+    "            prefixe(node[2], dic, val + \"0\")\n",
+    "            prefixe(node[3], dic, val + \"1\")\n",
+    "        else:\n",
+    "            dic[node[1]] = val\n",
+    "        \n",
+    "\n",
+    "#Dans T, le poids est T[0], le symbole T[1], le fils gauche T[2] et le fils droit T[3]\n",
     "def huffmanToCode(T):\n",
-    "    pass"
+    "    dic = dict()\n",
+    "    prefixe(T,dic,\"\")\n",
+    "    return dic\n",
+    "\n",
+    "print(huffmanToCode(res))\n"
    ]
   },
   {
@@ -274,10 +298,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "010010\n"
+     ]
+    }
+   ],
+   "source": [
+    "encodage = huffmanToCode(res)\n",
+    "\n",
+    "def applyCode(C, u):\n",
+    "    return u.translate(str.maketrans(C))\n",
+    "\n",
+    "print(applyCode(encodage, \"dd\"))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -288,10 +327,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(1, 'a'), (7, 'b'), (3, 'c'), (2, 'd'), (2, 'e')]\n",
+      "{'b': '0', 'a': '100', 'e': '101', 'd': '110', 'c': '111'}\n",
+      "0100110101\n"
+     ]
+    }
+   ],
+   "source": [
+    "test = [(1,'a'), (7,'b'), (3,'c'), (2,'d'), (2,'e')]\n",
+    "tree = huffmanTree(test)\n",
+    "print(test)\n",
+    "code = huffmanToCode(tree)\n",
+    "print(code)\n",
+    "print(applyCode(code, \"bade\"))\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -302,10 +358,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Taux de compression :  0.562210847054459\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"etranger.txt\") as file:\n",
+    "    data = file.read()\n",
+    "    letters = count(data)\n",
+    "    tree = huffmanTree(letters)\n",
+    "    code = huffmanToCode(tree)\n",
+    "    compression = applyCode(code, data)\n",
+    "\n",
+    "print(\"Taux de compression : \", len(compression) / len(data) / 8)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -326,10 +399,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class ByteEncoder:\n",
+    "    def __init__(self):\n",
+    "        self.buffer = []\n",
+    "        self.tab = []\n",
+    "    \n",
+    "    #Make sure b is a str\n",
+    "    def addBit(self, b):\n",
+    "        self.buffer.append(b)\n",
+    "        if(len(self.buffer) == 8):\n",
+    "            self.tab.append(int(''.join(self.buffer),2))\n",
+    "            self.buffer = []\n",
+    "\n",
+    "    def addString(self, s):\n",
+    "        for bit in s:\n",
+    "            self.addBit(bit)\n",
+    "\n",
+    "    def write(self,filename):\n",
+    "        while(len(self.buffer) != 8):\n",
+    "            self.buffer.append('0')\n",
+    "        self.addString(self.buffer)\n",
+    "        with open(filename, 'wb') as file:\n",
+    "            for number in self.tab:\n",
+    "                file.write(bytes(number))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -350,7 +447,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def encodeTree(Tree):\n",
+    "    pass"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -390,7 +490,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.10.6 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -404,7 +504,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.10.6"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+   }
   }
  },
  "nbformat": 4,
