[UPDATE] Prog réseau, Perl, c++

--- a/S1/Compression de données/TP1/2022-TP1-Huffman.ipynb
+++ b/S1/Compression de données/TP1/2022-TP1-Huffman.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
        "[(28, 'a'), (8, 'b'), (8, 'c'), (4, 'd')]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,15 +168,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(25369, 8480), (85004, 7977), (79770, 5360), (76353, 908), (98050, 4567)]\n",
-      "[(25369, 8480), (76353, 908), (79770, 5360), (85004, 7977), (98050, 4567)]\n"
+      "[(15626, 1731), (73356, 601), (15923, 1614), (58321, 105), (76981, 1985)]\n",
+      "[(15626, 1731), (15923, 1614), (58321, 105), (73356, 601), (76981, 1985)]\n"
      ]
     }
    ],
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -242,8 +242,12 @@
     "    return tas.extract()\n",
     "\n",
     "L = [(28, 'a'), (8, 'b'), (8, 'c'), (4, 'd')]\n",
+    "tree = huffmanTree(L)\n",
+    "print(tree)\n",
     "\n",
-    "print(huffmanTree(L))\n",
+    "def prefixe(tree): \n",
+    "    print(tree[])\n",
+    "\n",
     "\n"
    ]
   },
@@ -449,7 +453,7 @@
    "outputs": [],
    "source": [
     "def encodeTree(Tree):\n",
-    "    pass"
+    "    pass "
    ]
   },
   {
